fix some of the issues in the projects section reword some of the project descriptions add margin-bottom to images in features class move the note up closes #17

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2668,6 +2668,7 @@ input, select, textarea {
 			padding-right: 2.5em;
 			vertical-align: middle;
 			width: 48%;
+			margin-bottom: 1em;
 		}
 
 			.features article .image img {
