--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -31,7 +31,7 @@
 	$palette: (
 		bg:					#fff,
 		fg:					#888,
-		fg-bold:			#777,
+		fg-bold:			#66757F,
 		fg-light:			#aaa,
 		border:				#f4f4f4,
 		border-bg:			#fafafa,
@@ -41,24 +41,24 @@
 		border3-bg:			#eaeaea,
 
 		accent1: (
-			bg:				#4acaa8,
+			bg:				#00acee,
 			fg-bold:		#ffffff,
-			fg:				mix(#4acaa8, #ffffff, 25%),
-			fg-light:		mix(#4acaa8, #ffffff, 40%)
+			fg:				mix(#00acee, #ffffff, 25%),
+			fg-light:		mix(#00acee, #ffffff, 40%)
 		),
 
 		accent2: (
-			bg:				#989898,
+			bg:				#66757F,
 			fg-bold:		#ffffff,
-			fg:				mix(#989898, #ffffff, 25%),
-			fg-light:		mix(#989898, #ffffff, 40%)
+			fg:				mix(#66757F, #ffffff, 25%),
+			fg-light:		mix(#66757F, #ffffff, 40%)
 		),
 
 		header: (
-			bg:				#4acaa8,
+			bg:				#00acee,
 			fg-bold:		#ffffff,
-			fg:				mix(#4acaa8, #ffffff, 25%),
-			fg-light:		mix(#4acaa8, #ffffff, 40%),
-			border:			mix(#4acaa8, #ffffff, 90%)
+			fg:				mix(#00acee, #ffffff, 25%),
+			fg-light:		mix(#00acee, #ffffff, 40%),
+			border:			mix(#00acee, #ffffff, 90%)
 		)
 	);
