update: reduce words in projects, add better icons, flip blue colors closes #25 #26

--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -41,10 +41,10 @@
 		border3-bg:			#eaeaea,
 
 		accent1: (
-			bg:				#00acee,
+			bg:				#84bcda,
 			fg-bold:		#ffffff,
-			fg:				mix(#00acee, #ffffff, 25%),
-			fg-light:		mix(#00acee, #ffffff, 40%)
+			fg:				mix(#84bcda, #ffffff, 25%),
+			fg-light:		mix(#84bcda, #ffffff, 40%)
 		),
 
 		accent2: (
@@ -55,10 +55,10 @@
 		),
 
 		header: (
-			bg:				#00acee,
+			bg:				#84bcda,
 			fg-bold:		#ffffff,
-			fg:				mix(#00acee, #ffffff, 25%),
-			fg-light:		mix(#00acee, #ffffff, 40%),
-			border:			mix(#00acee, #ffffff, 90%)
+			fg:				mix(#84bcda, #ffffff, 25%),
+			fg-light:		mix(#84bcda, #ffffff, 40%),
+			border:			mix(#84bcda, #ffffff, 90%)
 		)
 	);
