--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -114,7 +114,7 @@ input, select, textarea {
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #00acee !important;
+			color: #84bcda !important;
 		}
 
 	strong, b {
@@ -1795,7 +1795,7 @@ input, select, textarea {
 	}
 
 	header.major h2 {
-		color: #00acee;
+		color: #84bcda;
 		font-size: 4.5em;
 	}
 
@@ -1858,7 +1858,7 @@ input, select, textarea {
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #00acee;
+			border-color: #84bcda;
 		}
 
 	select {
@@ -1950,15 +1950,15 @@ input, select, textarea {
 
 		input[type="checkbox"]:checked + label:before,
 		input[type="radio"]:checked + label:before {
-			background: #00ACEE;
-			border-color: #00ACEE;
+			background: #84BCDA;
+			border-color: #84BCDA;
 			color: #ffffff;
 			content: '\f00c';
 		}
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #00acee;
+			border-color: #84bcda;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -2387,7 +2387,7 @@ input, select, textarea {
 			}
 
 			ul.feature-icons li:before {
-				background: #84BCDA;
+				background: #00ACEE;
 				border-radius: 100%;
 				color: #ffffff;
 				display: block;
@@ -2503,7 +2503,7 @@ input, select, textarea {
 		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-		background-color: #00ACEE;
+		background-color: #84BCDA;
 		border-radius: 5px;
 		border: 0;
 		color: #ffffff !important;
@@ -2603,7 +2603,7 @@ input, select, textarea {
 		input[type="reset"].primary,
 		input[type="button"].primary,
 		.button.primary {
-			background-color: #00acee;
+			background-color: #84bcda;
 			color: #ffffff !important;
 		}
 
@@ -2687,7 +2687,7 @@ input, select, textarea {
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background: #00acee;
+		background: #84bcda;
 		color: #ccd6dd;
 		height: 100%;
 		overflow-y: auto;
@@ -2795,7 +2795,7 @@ input, select, textarea {
 
 						#header > nav ul li a.active {
 							background: #fff;
-							color: #00acee !important;
+							color: #84bcda !important;
 						}
 
 					#header > nav ul li:first-child {
@@ -3059,7 +3059,7 @@ input, select, textarea {
 					}
 
 					#titleBar .toggle:before {
-						background: #00acee;
+						background: #84bcda;
 						color: #ffffff;
 						content: '\f0c9';
 						display: block;
