--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2638,7 +2638,7 @@ input, select, textarea {
 /* Features */
 
 	.features article {
-		border-top: solid 3px #f4f4f4;
+		border-top: solid 3px #2a2a40;
 		margin-bottom: 2.25em;
 		padding-top: 2.25em;
 	}
