fix: adjust buttons on mobile
- update resume content and bio section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3460,6 +3460,11 @@ input[type='button']:disabled,
   ul.feature-icons li {
     display: block;
     width: 100%;
+    padding: 0.35em 0 0 3em;
+  }
+
+  ul.feature-icons li:has(a>button), ul.feature-icons li:has(a[role='button']) {
+    padding: 0;
   }
 
   /* Button */
